WIP zipfile and unzipfile components and demo pages.

--- a/apex-zip/src/package.xml
+++ b/apex-zip/src/package.xml
@@ -3,19 +3,40 @@
     <types>
         <members>ImportStaticResourceController</members>
         <members>MetadataService</members>
-        <members>SpreadsheetUpdateDemoController</members>
+        <members>UnzipDemoController</members>
+        <members>ZipDemoController</members>
         <name>ApexClass</name>
     </types>
     <types>
         <members>unzip</members>
+        <members>unzipfile</members>
         <members>zip</members>
         <members>zipEntry</members>
+        <members>zipfile</members>
         <name>ApexComponent</name>
     </types>
     <types>
         <members>importstaticresource</members>
         <members>spreadsheetupdatedemo</members>
+        <members>unzipdemo</members>
+        <members>zipdemo</members>
         <name>ApexPage</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>CustomApplication</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>CustomTab</name>
+    </types>
+    <types>
+        <members>ZipFile__c-Zip File Layout</members>
+        <name>Layout</name>
     </types>
     <types>
         <members>jszip</members>
